refactor: Code cleanup