@@ -3,21 +3,17 @@ package com.acepero13.research.bnfreplacer.core;
 import com.acepero13.research.bnfreplacer.core.reports.model.Difference;
 import com.acepero13.research.bnfreplacer.core.reports.model.Report;
 import com.acepero13.research.bnfreplacer.model.Expression;
-import com.acepero13.research.bnfreplacer.plugins.Preprocessing;
-import com.acepero13.research.bnfreplacer.plugins.SkipDummySlots;
 import com.acepero13.research.bnfreplacer.utils.fs.Reader;
 
 import java.io.InputStream;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class Replacer {
     private final Bnf destination;
     private final Bnf source;
     private final List<Difference> differences = new ArrayList<>();
-
 
 
     private Replacer(Bnf source, Bnf destination) {
@@ -68,8 +64,8 @@ public final class Replacer {
 
     public Report report() {
         List<Difference> report = differences.stream()
-                .filter(Difference::wasChanged)
-                .collect(Collectors.toList());
+                                             .filter(Difference::wasChanged)
+                                             .toList();
         return new Report(report);
     }
 }
